# Dashboard

DashBoardApp/: CMakeLists.txt  CarDashBoard.qml  ThirdWindow.qml  UserDisplay.qml  main.cpp  main.qml  qml.qrc
DashBoardApp/CarDashboard/: CMakeLists.txt  cardashboard.cpp  cardashboard.h
DashBoardApp/database/: CMakeLists.txt  database.cpp  database.h
